--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,27 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+.funny-picture {
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.5s ease-in-out;
+}
+
+.funny-picture.uploaded {
+  opacity: 1;
+  transform: scale(1);
+  animation: explosion 1s ease-out;
+}
+
+@keyframes explosion {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
